--- a/index.html
+++ b/index.html
@@ -1,73 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://foliotek.github.io/Croppie/croppie.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css" />
-
-  <script src="/assets/script/script.js" defer></script>
-
-  <!-- Fonte -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&display=swap" rel="stylesheet" />
-
-
-  <!-- CROPPER -->
-
-</head>
-
-<body>
-  <header>
-    <div class="topo">
-      <h1><img class="logo-korkut" src="/assets/img/logo-orkut.svg" alt="logo-orkut"></h1>
-      <div class="container__login">
-        <img src="/assets/img/perfil-login.svg" alt="img do perfil-login">
-        <img src="/assets/img/login-seta.svg" alt="img do login-seta">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokémons Cards!</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="title">
+      <h1>Invocar Pokémons!!</h1>
+      <h2>Nome do Pokemon ou Numero Aléatorio!!!</h2>
+      <div class="input-container">
+        <input type="text" id="pokemon-name" placeholder="Digite o nome do Pokémon">
       </div>
     </div>
-  </header>
-  <div class="container__input">
-    <!-- <label for="pesquisa"><img src="/assets/img/lupa.svg" alt="lupa"></label> -->
-    <input class="searc" type="search" name="pesquisa" id="pesquisa" placeholder="Pesquisar no Orkut" maxlength="128">
-  </div>
 
-  <main>
-    <div class="container__perfil">
-      <div class="perfil__usuario">
-        <div class="img_perfil">
-          <img class="foto_perfil" id="output" src="/assets/img/foto-perfil.svg" alt="foto do perfil" />
-          <div class="edit-img" id="edita_foto">
-            <img class="foto-edit" src="/assets/img/camera.png" alt="camera" />
-          </div>
+    <div class="container" id="pokemon-container">
+      <!-- molde exemplo -->
+      <!-- <div class="card" id="card">
+        <img
+          id="img"
+          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
+          alt="Bulbasaur"
+        />
+        <div class="card-body">
+          <h3 class="card-title">Bulbasaur</h3>
+          <button class="delete-btn" onclick="deletePokemon(this)">
+            Delete
+          </button>
         </div>
-        <h2>Iuri Silva</h2>
-        <p>Solteiro, Brasil</p>
-      </div>
-
-
-      <!-- MODAL EDITA IMG -->
-      <div class="perfil__editar">
-        <h1>TESTE</h1>
-        <button id="btn_fechar">FECHAR</button>
-
-        <div>
-        </div>
-      </div>
-
-
-
-
-
-
-  </main>
-</body>
-
+      </div>       -->
+    </div>
+    <script src="scripts.js"></script>
+  </body>
 </html>
