--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokémons Cards!</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
     <div class="title">
@@ -31,6 +31,6 @@
         </div>
       </div>       -->
     </div>
-    <script src="scripts.js"></script>
+    <script src="/assets/scripts/scripts.js"></script>
   </body>
 </html>
